k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calc-api-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: calc-api
